--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+# workaround for linguist incorrectly detecting Objective-C
 *.c  linguist-language=C
 *.h  linguist-language=C
 *.sh linguist-language=Shell
